--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@mui/lab": "^6.0.0-beta.9",
+    "@mui/material": "^6.1.0",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
